--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
+<!-- <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -175,14 +175,10 @@
       margin-block: 1.5rem;
     }
   }
-</style>
+</style> -->
 
 <main class="main">
-  <nav>
-    <a routerLink="/products">Sản phẩm</a>
-    <!-- Thêm link khác nếu cần -->
-  </nav>
-  <router-outlet></router-outlet>
+  
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
