--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,18 @@
-<p>home-page works!</p>
+<div class="mt-5">
+    <div class="video_welcom">
+        <video muted autoplay loop>
+            <source src="assets/video-welcome.mp4" type="video/mp4">
+        </video>
+        <div class="sub_video">
+            <div class="welcome_title">WELCOM</div>
+            <div class="welcome_desc">
+                Buy, sell, discover authenticated
+                archived pieces from world's top brands
+            </div>
+            <div class="login_signup">
+                <button class="btn_login">LOG IN</button>
+                <button class="btn_signup">SIGN UP</button>
+            </div>
+        </div>
+    </div>
+</div>
