dashboard, responsive header, footer

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,8 +1,13 @@
-<header id="header-user-container" class="w-100 container">
-    <div class="d-flex flex-row align-items-center justify-content-between header-user-wrapper">
+<header id="header-user-container" class="w-100 container mb-5">
+    <nav class="nav d-flex flex-row align-items-center justify-content-between header-user-wrapper">
+        <button class="d-block d-lg-none bg-transparent border-0 navbar-toggler" type="button"
+            data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
+            aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars fa-2xl"></i>
+        </button>
         <div class="header-logo-container">
         </div>
-        <div class="header-search-container">
+        <div class="header-search-container d-lg-flex d-none">
             <div class="icon-search">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path
@@ -15,42 +20,58 @@
                 <button>SEARCH</button>
             </div>
         </div>
-        <div class="header-link-item">
-            <a>SELL</a>
+        <div class="d-flex flex-row gap-2">
+            <div class="header-link-item cart">
+                <a>
+                    <i class="fa-solid fa-cart-shopping fa-xl"></i>
+                    <span class="cart-total">0</span>
+                </a>
+            </div>
+            <div class="header-link-item">
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path
+                            d="M9 0.982178C9 0.567964 9.33579 0.232178 9.75 0.232178H14.25C14.6642 0.232178 15 0.567964 15 0.982178C15 1.39639 15.3358 1.73218 15.75 1.73218C16.1642 1.73218 16.5 2.06796 16.5 2.48218C16.5 2.89639 16.8358 3.23218 17.25 3.23218C17.6642 3.23218 18 3.56796 18 3.98218V8.48218C18 8.89639 17.6642 9.23218 17.25 9.23218C16.8358 9.23218 16.5 9.56796 16.5 9.98218C16.5 10.3964 16.1642 10.7322 15.75 10.7322C15.3358 10.7322 15 11.068 15 11.4822C15 11.8964 14.6642 12.2322 14.25 12.2322H9.75C9.33579 12.2322 9 11.8964 9 11.4822C9 11.068 8.66421 10.7322 8.25 10.7322C7.83579 10.7322 7.5 10.3964 7.5 9.98218C7.5 9.56796 7.16421 9.23218 6.75 9.23218C6.33579 9.23218 6 8.89639 6 8.48218V3.98218C6 3.56796 6.33579 3.23218 6.75 3.23218C7.16421 3.23218 7.5 2.89639 7.5 2.48218C7.5 2.06796 7.83579 1.73218 8.25 1.73218C8.66421 1.73218 9 1.39639 9 0.982178ZM9.75 7.73218C10.1642 7.73218 10.5 8.06796 10.5 8.48218C10.5 8.89639 10.8358 9.23218 11.25 9.23218H12.75C13.1642 9.23218 13.5 8.89639 13.5 8.48218C13.5 8.06796 13.8358 7.73218 14.25 7.73218C14.6642 7.73218 15 7.39639 15 6.98218V5.48218C15 5.06796 14.6642 4.73218 14.25 4.73218C13.8358 4.73218 13.5 4.39639 13.5 3.98218C13.5 3.56796 13.1642 3.23218 12.75 3.23218H11.25C10.8358 3.23218 10.5 3.56796 10.5 3.98218C10.5 4.39639 10.1642 4.73218 9.75 4.73218C9.33579 4.73218 9 5.06796 9 5.48218V6.98218C9 7.39639 9.33579 7.73218 9.75 7.73218ZM6 14.4822C6 14.068 6.33579 13.7322 6.75 13.7322H17.25C17.6642 13.7322 18 14.068 18 14.4822C18 14.8964 18.3358 15.2322 18.75 15.2322H20.25C20.6642 15.2322 21 15.568 21 15.9822C21 16.3964 21.3358 16.7322 21.75 16.7322C22.1642 16.7322 22.5 17.068 22.5 17.4822C22.5 17.8964 22.8358 18.2322 23.25 18.2322C23.6642 18.2322 24 18.568 24 18.9822V21.2322C24 22.889 22.6569 24.2322 21 24.2322H3C1.34315 24.2322 0 22.889 0 21.2322V18.9822C0 18.568 0.335786 18.2322 0.75 18.2322C1.16421 18.2322 1.5 17.8964 1.5 17.4822C1.5 17.068 1.83579 16.7322 2.25 16.7322C2.66421 16.7322 3 16.3964 3 15.9822C3 15.568 3.33579 15.2322 3.75 15.2322H5.25C5.66421 15.2322 6 14.8964 6 14.4822ZM4.5 18.9822C4.5 19.3964 4.16421 19.7322 3.75 19.7322C3.33579 19.7322 3 20.068 3 20.4822C3 20.8964 3.33579 21.2322 3.75 21.2322H20.25C20.6642 21.2322 21 20.8964 21 20.4822C21 20.068 20.6642 19.7322 20.25 19.7322C19.8358 19.7322 19.5 19.3964 19.5 18.9822C19.5 18.568 19.1642 18.2322 18.75 18.2322H17.25C16.8358 18.2322 16.5 17.8964 16.5 17.4822C16.5 17.068 16.1642 16.7322 15.75 16.7322H8.25C7.83579 16.7322 7.5 17.068 7.5 17.4822C7.5 17.8964 7.16421 18.2322 6.75 18.2322H5.25C4.83579 18.2322 4.5 18.568 4.5 18.9822Z"
+                            fill="black" />
+                    </svg>
+                </a>
+            </div>
         </div>
-        <div class="header-link-item">
-            <a>SHOP</a>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div class="header-search-container w-100">
+                    <div class="icon-search">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M6 2H14V4H6V2ZM4 6V4H6V6H4ZM4 14H2V6H4V14ZM6 16H4V14H6V16ZM14 16V18H6V16H14ZM16 14H14V16H16V18H18V20H20V22H22V20H20V18H18V16H16V14ZM16 6H18V14H16V6ZM16 6V4H14V6H16Z"
+                                fill="black" />
+                        </svg>
+                    </div>
+                    <input type="text" class="search">
+                    <div class="btn-saerch-header">
+                        <button>SEARCH</button>
+                    </div>
+                </div>
+                <ul class="d-flex flex-column gap-2 justify-content-center align-items-start mt-5 offcanvas-menu-header">
+                    <li><a href="#">ALL ITEMS</a></li>
+                    <li><a href="#">MENSWEAR</a></li>
+                    <li><a href="#">WOMENSWEAR</a></li>
+                    <li><a href="#">SNEAKER</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="header-link-item">
-            <a>ARTICLES</a>
+    </nav>
+    <div class="d-lg-block d-none">
+        <div class="pt-4" id="nav-header-container">
+            <ul class="">
+                <li><a href="#">ALL ITEMS</a></li>
+                <li><a href="#">MENSWEAR</a></li>
+                <li><a href="#">WOMENSWEAR</a></li>
+                <li><a href="#">SNEAKER</a></li>
+            </ul>
         </div>
-        <div class="header-link-item">
-            <a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
-                    <path
-                        d="M13.2576 22.0504H11.0758V20.9595H9.98484V19.8686H8.89393V18.7777H7.80302V17.6868H6.71211V16.5959H5.6212V15.505H4.5303V14.4141H3.43939V13.3232H2.34848V11.1413H1.25757V5.68679H2.34848V4.59588H3.43939V3.50497H4.5303V2.41406H9.98484V3.50497H11.0758V4.59588H13.2576V3.50497H14.3485V2.41406H19.803V3.50497H20.8939V4.59588H21.9848V5.68679H23.0758V11.1413H21.9848V13.3232H20.8939V14.4141H19.803V15.505H18.7121V16.5959H17.6212V17.6868H16.5303V18.7777H15.4394V19.8686H14.3485V20.9595H13.2576V22.0504ZM5.6212 12.2322V13.3232H6.71211V14.4141H7.80302V15.505H8.89393V16.5959H9.98484V17.6868H11.0758V18.7777H13.2576V17.6868H14.3485V16.5959H15.4394V15.505H16.5303V14.4141H17.6212V13.3232H18.7121V12.2322H19.803V10.0504H20.8939V6.7777H19.803V5.68679H18.7121V4.59588H15.4394V5.68679H14.3485V6.7777H13.2576V7.86861H11.0758V6.7777H9.98484V5.68679H8.89393V4.59588H5.6212V5.68679H4.5303V6.7777H3.43939V10.0504H4.5303V12.2322H5.6212Z"
-                        fill="black" />
-                </svg>
-            </a>
-        </div>
-        <div class="header-link-item">
-            <a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
-                    <path
-                        d="M9 0.982178C9 0.567964 9.33579 0.232178 9.75 0.232178H14.25C14.6642 0.232178 15 0.567964 15 0.982178C15 1.39639 15.3358 1.73218 15.75 1.73218C16.1642 1.73218 16.5 2.06796 16.5 2.48218C16.5 2.89639 16.8358 3.23218 17.25 3.23218C17.6642 3.23218 18 3.56796 18 3.98218V8.48218C18 8.89639 17.6642 9.23218 17.25 9.23218C16.8358 9.23218 16.5 9.56796 16.5 9.98218C16.5 10.3964 16.1642 10.7322 15.75 10.7322C15.3358 10.7322 15 11.068 15 11.4822C15 11.8964 14.6642 12.2322 14.25 12.2322H9.75C9.33579 12.2322 9 11.8964 9 11.4822C9 11.068 8.66421 10.7322 8.25 10.7322C7.83579 10.7322 7.5 10.3964 7.5 9.98218C7.5 9.56796 7.16421 9.23218 6.75 9.23218C6.33579 9.23218 6 8.89639 6 8.48218V3.98218C6 3.56796 6.33579 3.23218 6.75 3.23218C7.16421 3.23218 7.5 2.89639 7.5 2.48218C7.5 2.06796 7.83579 1.73218 8.25 1.73218C8.66421 1.73218 9 1.39639 9 0.982178ZM9.75 7.73218C10.1642 7.73218 10.5 8.06796 10.5 8.48218C10.5 8.89639 10.8358 9.23218 11.25 9.23218H12.75C13.1642 9.23218 13.5 8.89639 13.5 8.48218C13.5 8.06796 13.8358 7.73218 14.25 7.73218C14.6642 7.73218 15 7.39639 15 6.98218V5.48218C15 5.06796 14.6642 4.73218 14.25 4.73218C13.8358 4.73218 13.5 4.39639 13.5 3.98218C13.5 3.56796 13.1642 3.23218 12.75 3.23218H11.25C10.8358 3.23218 10.5 3.56796 10.5 3.98218C10.5 4.39639 10.1642 4.73218 9.75 4.73218C9.33579 4.73218 9 5.06796 9 5.48218V6.98218C9 7.39639 9.33579 7.73218 9.75 7.73218ZM6 14.4822C6 14.068 6.33579 13.7322 6.75 13.7322H17.25C17.6642 13.7322 18 14.068 18 14.4822C18 14.8964 18.3358 15.2322 18.75 15.2322H20.25C20.6642 15.2322 21 15.568 21 15.9822C21 16.3964 21.3358 16.7322 21.75 16.7322C22.1642 16.7322 22.5 17.068 22.5 17.4822C22.5 17.8964 22.8358 18.2322 23.25 18.2322C23.6642 18.2322 24 18.568 24 18.9822V21.2322C24 22.889 22.6569 24.2322 21 24.2322H3C1.34315 24.2322 0 22.889 0 21.2322V18.9822C0 18.568 0.335786 18.2322 0.75 18.2322C1.16421 18.2322 1.5 17.8964 1.5 17.4822C1.5 17.068 1.83579 16.7322 2.25 16.7322C2.66421 16.7322 3 16.3964 3 15.9822C3 15.568 3.33579 15.2322 3.75 15.2322H5.25C5.66421 15.2322 6 14.8964 6 14.4822ZM4.5 18.9822C4.5 19.3964 4.16421 19.7322 3.75 19.7322C3.33579 19.7322 3 20.068 3 20.4822C3 20.8964 3.33579 21.2322 3.75 21.2322H20.25C20.6642 21.2322 21 20.8964 21 20.4822C21 20.068 20.6642 19.7322 20.25 19.7322C19.8358 19.7322 19.5 19.3964 19.5 18.9822C19.5 18.568 19.1642 18.2322 18.75 18.2322H17.25C16.8358 18.2322 16.5 17.8964 16.5 17.4822C16.5 17.068 16.1642 16.7322 15.75 16.7322H8.25C7.83579 16.7322 7.5 17.068 7.5 17.4822C7.5 17.8964 7.16421 18.2322 6.75 18.2322H5.25C4.83579 18.2322 4.5 18.568 4.5 18.9822Z"
-                        fill="black" />
-                </svg>
-            </a>
-        </div>
-    </div>
-    <div class="pt-4" id="nav-header-container">
-        <ul class="">
-            <li>DESIGNERS</li>
-            <li>COLLECTIONS</li>
-            <li>MENSWEAR</li>
-            <li>WOMENSWEAR</li>
-            <li>SNEAKER</li>
-            <li>AUCTION</li>
-        </ul>
     </div>
 </header>
