--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -4,7 +4,7 @@
             <source src="assets/video-welcome.mp4" type="video/mp4">
         </video>
         <div class="sub_video">
-            <div class="welcome_title">WELCOM</div>
+            <div class="welcome_title">WELCOME</div>
             <div class="welcome_desc">
                 Buy, sell, discover authenticated
                 archived pieces from world's top brands
@@ -14,5 +14,75 @@
                 <button class="btn_signup">SIGN UP</button>
             </div>
         </div>
+    </div>
+    <div class="container w-100">
+        <!-- men swear -->
+        <div class="homepage-shop-sample d-flex flex-column justify-content-center align-items-center gap-4">
+            <div class="d-flex flex-row justify-content-between align-items-center w-100">
+                <div class="title">Shop Menswear</div>
+                <a href="" class="btn-explore-more">Explore more</a>
+            </div>
+            <div class="list-product row row-cols-2 row-cols-md-4 g-4">
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+        <!-- women swear -->
+        <div class="homepage-shop-sample d-flex flex-column justify-content-center align-items-center gap-4">
+            <div class="d-flex flex-row justify-content-between align-items-center w-100">
+                <div class="title">Shop Womenswear</div>
+                <a href="" class="btn-explore-more">Explore more</a>
+            </div>
+            <div class="list-product row row-cols-2 row-cols-md-4 g-4">
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+        <!-- shop footwear -->
+        <div class="homepage-shop-sample d-flex flex-column justify-content-center align-items-center gap-4">
+            <div class="d-flex flex-row justify-content-between align-items-center w-100">
+                <div class="title">Shop Footweer</div>
+                <a href="" class="btn-explore-more">Explore more</a>
+            </div>
+            <div class="list-product row row-cols-2 row-cols-md-4 g-4">
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+                <div class="col">
+                    <img src="assets/menswearhomepage1.jpg" alt="" class="" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="subfooter-homepage">
+        <img src="assets/homepage_subfooter.jpg" alt="" class="">
+        <div class="subfooter-homepage-content">QUALITY IS REMEMBERED LONG
+            AFTER PRICE IS FORGOTTEN</div>
     </div>
 </div>
