--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer id="footer" class="container">
     <div class="d-flex flex-md-row flex-column">
-        <ul class="d-flex justify-content-between align-items-center flex-wrap w-100">
+        <ul class="d-flex flex-lg-row flex-column justify-content-between align-items-center w-100 gap-xs-0 gap-3">
             <li>ABOUT</li>
             <li>HELP & FAQ</li>
             <li>PRIVACY</li>
