An: giao dien login, signup

--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,1 +1,50 @@
-<p>register works!</p>
+<div class="container">
+    <div class="login-form-container">
+        <form class="login-form">
+            <div class="login-form-title">SIGN UP</div>
+            <div class="input-login-group">
+                <div>
+                    <input type="text" placeholder="first name">
+                </div>
+                <div>
+                    <input type="text" placeholder="fast name">
+                </div>
+                <div>
+                    <input type="text" placeholder="fsername">
+                </div>
+                <div>
+                    <input type="text" placeholder="fmail">
+                </div>
+                <div>
+                    <input type="text" placeholder="username">
+                </div>
+                <div class="position-relative">
+                    <input type="password" id="password" placeholder="password">
+                    <div class="hidePassword">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22" fill="none">
+                            <path
+                                d="M13.5 14H9.5V13H8.5V9H9.5V8H13.5V9H14.5V13H13.5M15.5 17H7.5V16H5.5V15H3.5V14H2.5V13H1.5V9H2.5V8H3.5V7H5.5V6H7.5V5H15.5V6H17.5V7H19.5V8H20.5V9H21.5V13H20.5V14H19.5V15H17.5V16H15.5M12.5 12V10H10.5V12M15.5 15V14H17.5V13H18.5V12H19.5V10H18.5V9H17.5V8H15.5V7H7.5V8H5.5V9H4.5V10H3.5V12H4.5V13H5.5V14H7.5V15H15.5Z"
+                                fill="#254174" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="position-relative">
+                    <input type="password" id="password" placeholder="confirm password">
+                    <div class="hidePassword">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22" fill="none">
+                            <path
+                                d="M13.5 14H9.5V13H8.5V9H9.5V8H13.5V9H14.5V13H13.5M15.5 17H7.5V16H5.5V15H3.5V14H2.5V13H1.5V9H2.5V8H3.5V7H5.5V6H7.5V5H15.5V6H17.5V7H19.5V8H20.5V9H21.5V13H20.5V14H19.5V15H17.5V16H15.5M12.5 12V10H10.5V12M15.5 15V14H17.5V13H18.5V12H19.5V10H18.5V9H17.5V8H15.5V7H7.5V8H5.5V9H4.5V10H3.5V12H4.5V13H5.5V14H7.5V15H15.5Z"
+                                fill="#254174" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-login">SIGN UP</button>
+        </form>
+        <div
+            class="register-container d-flex flex-column flex-md-row align-items-center justify-content-center gap-md-2 gap-3">
+            <p>ALREADY have an account?</p>
+            <a href="/login">LOG IN</a>
+        </div>
+    </div>
+</div>
